--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_deals_page">DealsPage</string>
     <string name="Login">Login</string>
+    <string name="skip">Skip</string>
     <string name="username">Username:</string>
     <string name="email">Email:</string>
     <string name="phone">Phone:</string>
