--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DivvyUp</string>
+    <string name="app_name">DivvyApp</string>
     <string name="title_activity_login_page">LoginPage</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_deals_page">DealsPage</string>
     <string name="Login">Login</string>
     <string name="skip">Skip</string>
+    <string name="timePick">Until when will you be at the mall? </string>
     <string name="username">Username:</string>
     <string name="email">Email:</string>
     <string name="phone">Phone:</string>
+    <string name="claimDeal">Request Match</string>
     <string name="title_activity_data_sender">DataSender</string>
+    <string name="title_activity_find_me_match">FindMeMatch</string>
 
 </resources>
