--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="picture">Picture:</string>
     <string name="storeid">StoreID:</string>
     <string name="deadLine">deadLine:</string>
-    
+    <string name="image_button_delete">image_button_delete:</string>
+    <string name="title_activity_add_deal">AddDeal</string>
 
 </resources>
